--- a/style/style.css
+++ b/style/style.css
@@ -40,7 +40,11 @@ main{
 nav{
     width: 15%;
     display: inline-block;
-    position: relative;
+}
+
+ul{
+    display: inline;
+    top: 0;
 }
 
 li{
