estilos css reiniciados - mapas añadidos en game-info.html

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,51 @@ body{
 }
 
 header{
+    display: inline;
+    margin: 0 auto;
+}
+
+h1{
+    font-size: 2.5em;
+    text-shadow: #000000 2px 2px;
+    margin: 10px;
+    color: #f6dc2e;
+}
+
+li{
+    list-style: none;
+}
+
+ul.lista-links{
+    background: #ffffff;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 15% 10px 0;
+    margin: 0px;
+}
+
+.menu{
+    color: #000000;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    font-size: 1em;
+}
+
+.logo{
+    width: 100px;
+    margin: 10px 10px 10px 15%;
+}
+
+.logo-tit{
+    display: inline-flex;
+    align-items: center;
+}
+
+/*
+
+header{
     background-image: url("../assets/img/header-1.jpg");
     background-size: 100%;
     background-position: center;
@@ -72,12 +117,7 @@ section{
     height: 100px;
     margin: 0 auto;
     margin-top: 50px;
-    position: absolute;
-    left: 70%;
-    top: 130px;
-    background: rgba(255, 255, 255, 0.8);
-    border-radius: 24px;
-    box-shadow: 2px 2px 6px #424242
+    
 }
 
 footer{
@@ -87,3 +127,4 @@ footer{
     margin: 0 auto;
 }
 
+*/
