--- a/style/style-3.css
+++ b/style/style-3.css
@@ -135,3 +135,44 @@ th {
 strong {
     color: #f6dc2e;
 }
+
+
+form {
+    width: 500px;
+    margin: 50px auto 100px auto; 
+    text-align: left;
+  }
+  
+  label {
+    font-weight: bold;
+  }
+  
+  input[type="text"], select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #0071C5;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: #005493;
+  }
+
+.permission {
+    margin-bottom: 20px;
+    background-color: white;
+    padding: 50px;
+    font-size: large;
+    border-radius: 10px;
+}
